--- a/package.json
+++ b/package.json
@@ -6,7 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "husky install && npx husky add .husky/pre-commit \"npx lint-staged -q\""
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "prettier --cache --write",
+      "eslint --cache --fix"
+    ],
+    "*.{css,json}": [
+      "prettier --cache --write"
+    ]
   },
   "dependencies": {
     "@types/node": "18.11.9",
@@ -23,6 +33,8 @@
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
     "autoprefixer": "^10.4.13",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.0.3",
     "postcss": "^8.4.19",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.2.4"
